css/style.css
/* ... */
canvas{
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    background: rgba(0,0,0,0.3);
}

.banner-btn a {
    background-color: #E15F41;
    color: #ffffff;
    padding: 10px 35px;
    display: inline-block;
    margin-top: 25px;
    border-radius: 25px;
    text-decoration: none;
    letter-spacing: 2px;
}

@media (max-width: 991px){
    .welcome-text{
        text-align: center;
        margin: 25px auto;
    }
}

/* --------------  Banner area css ends --------------- */

/*---------------6. About area starts ----------------*/

.about-left {
    -webkit-box-shadow: 10px 10px 1px #c6c6c6,20px 20px 1px #dddddd;
    -moz-box-shadow: 10px 10px 1px #c6c6c6,20px 20px 1px #dddddd;
    box-shadow: 10px 10px 1px #c6c6c6,20px 20px 1px #dddddd;
}
.about-right {
    padding: 2% 5%;
}
.about-right h1 {
    border-left: 3px solid #E15F41;
    padding-left: 15px;
    font-size: 30px;
    line-height:40px;
}
.text-primary {
    color: #E15F41;
}
.socials {
    margin-top: 5%;
}
.socials li {
    display: inline-block;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    margin-right: 25px;
}
.socials a {
    display: inline-block;
    height: 40px;
    width: 40px;
    font-size: 16px;
    color: #222222;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
    border: 2px solid #222222;
    background: transparent;
    line-height: 2.5;
    text-align: center;
}
.socials a:hover{
    background: #222222;
    color: #ffffff;
}

.socials a i{
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
}


/*------- 7. Resume area css starts -------*/

.resume-area h5 {
    font-size: 20px;
}
#resume h1 {
    padding-left: 15px;
    font-size: 30px;
}

.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: #000000;
    top: 0;
    bottom: 0;
    left: 0;
    margin-left: -3px;
}

.wrapper {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 100%;
}

.wrapper::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: white;
    border: 4px solid #E15F41;
    top: 20px;
    border-radius: 50%;
    z-index: 1;
}

.right {
    left: 0;
}

.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid #000;
    border-width: 10px 10px 10px 0;
    border-color: transparent #000 transparent transparent;
}

.right::after {
    left: -12px;
}

.content {
    padding: 20px 30px;
    background-color: white;
    position: relative;
    border-radius: 6px;
}


.content {
    border: 1px solid #000000;
    color: #000000;
}
.education-area h6,.experience-area h6 {
    font-size: 20px;
}

#resume h3 {
    font-size: 15px;
    color: #E15F41;
    margin: 10px auto;
    text-transform: uppercase;
}

#resume h4 {
    font-size: 15px;
    color:#000000;
}

#resume h4 span {
    padding-left: 10px;
}

#resume h5 {
    padding-left: 40px;
}

#resume p {
    font-size: 13px;
}

/*------ Resume area ends ---------*/

/*---------------8. Services area Starts--------------*/

.services-area {
    background-color: #eeeeee;
}

.services-icon i {
    font-size: 35px;
    color: #ffffff;
}

.services-content h3 {
    line-height: 1.9;
    text-transform: uppercase;
}

.services-icon {
    border: 1px solid #E15F41;
    display: inline-block;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    padding: 20px;
    background-color: #E15F41;
}

.single-services {
    padding: 40px 20px;
    box-shadow: rgba(58,78,95,0.2) 0 10px 16px, rgba(58,78,95,0.05) 0 -5px 16px;
    margin-bottom: 15px;
    -webkit-border-radius:10px;
    -moz-border-radius:10px;
    border-radius:10px;
}

.single-services:hover {
    box-shadow: 1px 3px 4px 5px rgba(199,199,199,.8);
    transition: ease .09s;
}

.single-services:hover .services-icon{
    background-color: #ffffff;
    transition: ease .3s;
    border-color: #E15F41;
}

.single-services:hover .services-icon i{
    color: #E15F41;
}

.single-services:hover{
    background-color: #E15F41;
    -webkit-transition: .9s;
    -moz-transition: .9s ;
    -ms-transition: .9s ;
    -o-transition: .9s ;
    transition: .9s ;
}
.single-services:hover .services-content{
    color: #ffffff;
}
.single-services:hover .services-content h3{
    color: #ffffff;
}

/*--------------- Services area ends --------------*/

/*--------------9. Portfolio area starts-----------*/

#portfolio h1 {
    /border-left: 3px solid #E94E63;
    padding-left: 15px;
    font-size: 30px;
}


.gallery-items {
    position: relative;
    margin-bottom: 30px;
}

.gallery-items .img {
    display: block;
    position: relative;
}

.gallery-items .img::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(255,255,255,0.8);
    color: #E94E63;
    opacity: 0;
    -webkit-transition: .7s;
    -moz-transition: .7s;
    -ms-transition: .7s;
    -o-transition: .7s;
    transition: .7s;
}

.gallery-items .img img {
    width: 100%;
}

.gallery-items:hover .img::before {
    content: "";
    display: block;
    position: absolute;
    top: 10px;
    right: 10px;
    bottom: 10px;
    left: 10px;
    opacity: 1;
}

.gallery-items:hover .gallery-text {
    opacity: 1;
    -webkit-transition: .9s;
    -moz-transition: .9s ;
    -ms-transition: .9s ;
    -o-transition: .9s ;
    transition: .9s ;
}
/* ... */

